fix alignment between the loader and the other right icons

--- a/src/app/core/components/left-nav-tree/left-nav-tree.component.scss
+++ b/src/app/core/components/left-nav-tree/left-nav-tree.component.scss
@@ -306,9 +306,9 @@ $bk-secondary: #3B73B4;
 
         .node-state {
           margin-left: auto;
-
           i {
             margin-left: 0.5rem;
+            font-size: 1.2rem;
           }
         }
 
